--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -119,3 +119,10 @@
     font-weight: 400;
     color: #000000 !important;
 }
+
+.des{
+    font-weight: 400;
+    color: #000000;
+    font-family: 'Raleway',sans-serif;
+    font-size: 14px;
+}
