Course section done

--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -191,3 +191,16 @@
     font-weight: 600;
     font-size: 14px;
 }
+
+.courseTitle{
+    font-family: 'Montserreat',sans-serif !important;
+    font-size: 20px !important;
+    font-weight: 600 !important;
+}
+
+.courseDescription{
+    font-weight: 400;
+    color: #000000;
+    font-family: 'Raleway',sans-serif;
+    font-size: 14px;
+}
