--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -218,3 +218,14 @@
     font-size: 50px;
     color: #0073E6 !important;
 }
+
+
+.clientImage{
+    
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    /* border: 1px solid #0073E6; */
+    border-radius: 50%;
+    
+}
