--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -269,3 +269,45 @@
     font-weight: 400;
     color: wheat;
 }
+
+
+.topPage{
+    background-image: url('../images/banner.jpg');
+    min-height: 300px;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+
+.topPagerOverlay{
+    position: absolute;
+    min-height: 300px;
+    width: 100%;
+    background: rgba(0,0,0,0.6);
+}
+
+.topPageContent{
+    margin-top: 10rem;
+}
+
+.topPageSubTitle{
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: white;
+}
+
+.aboutDescription{
+    margin-top: 50px;
+    font-weight: 400;
+    color: #000000;
+    font-family: 'Raleway',sans-serif;
+    font-size: 14px;
+    padding: 20px 70px 20px 70px;
+
+}
+
+
