--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -74,7 +74,7 @@
 
 .navTitle{
     font-family: 'Montserreat',sans-serif;
-    color: white !important;
+    color: white;
     font-weight: 700;
     font-size: 24px;
 }
@@ -110,14 +110,14 @@
     text-decoration: none !important;
     font-family: 'Montserreat',sans-serif;
     font-weight: 400;
-    color: #ffffff !important;
+    color: #ffffff ;
 }
 .navItemScroll{
     font-size: 16px;
     text-decoration: none !important;
     font-family: 'Montserreat',sans-serif;
     font-weight: 400;
-    color: #000000 !important;
+    color: #000000;
 }
 
 .des{
